--- a/index.html
+++ b/index.html
@@ -5,45 +5,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Valerii Kozhevets Story</title>
+    <title>[Your name] Website</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
     <header>
-        <h1>Valerii Kozhevets</h1>
+        <h1> [Your name] </h1>
     </header>
 
     <main>
         <section class="intro">
-            <img src="profile.jpg" alt="My Photo" class="profile-pic">
-            <h2>Hello! I'm [Your Name]</h2>
-            <p>Welcome to my page. I love to learn new things and have fun adventures!</p>
+            <div class="container">
+                <div class="left-block">
+                    <img src="images/ValeraPhoto.png" alt="My Photo" class="profile-pic">
+                </div>
+                <div class="right-block">
+                    <h2>Hello! My name is [Your name]</h2>
+                    <p>I am ...</p>
+                </div>
+            </div>
+
+
         </section>
-        <section class="favorites">
-            <h3>My Favorites</h3>
+        <section>
+            <h3>My Favorite:</h3>
             <ul>
-                <li><strong>Color:</strong> Blue</li>
-                <li><strong>Animal:</strong> Dog</li>
-                <li><strong>Food:</strong> Pizza</li>
-                <li><strong>Hobby:</strong> Drawing</li>
-                <li><strong>Book:</strong> Harry Potter</li>
+                <li><strong>Color:</strong> Grey </li>
+                <li><strong>Animal:</strong> ... </li>
             </ul>
         </section>
-        <section class="fun-facts">
-            <h3>Fun Facts About Me</h3>
-            <ul>
-                <li>I can ride a bike.</li>
-                <li>I have a pet turtle named Speedy.</li>
-                <li>I love playing soccer.</li>
-                <li>I enjoy baking cookies with my mom.</li>
-                <li>I can solve a Rubik's cube.</li>
-            </ul>
-        </section>
+
+
     </main>
-    <footer>
-        <p>&copy; 2024 [Your Name]. All rights reserved.</p>
-    </footer>
+
 </body>
+<footer>
+    <p> [Your name] </p>
+</footer>
 
 </html>
